--- a/techio.yml
+++ b/techio.yml
@@ -2,3 +2,7 @@ title: Custom Template
 plan:
 - title: Welcome
   statement: markdowns/welcome.md
+projects:
+  test-java-playground:
+    buildCommand: echo "got to our buildCommand"
+    runner: niemasd/techio_java
